objects/CSC_Email_Addresses__c.object
<CustomObject>
    <fields>
        <fullName>AustriaFlagID__c</fullName>
        <label>AustriaFlagID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Austria_Email_To_Case__c</fullName>
        <label>Austria_Email_To_Case</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GermanyFlagID__c</fullName>
        <label>GermanyFlagID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Germany_Email_To_Case__c</fullName>
        <label>Germany_Email_To_Case</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SwissFlagID__c</fullName>
        <label>SwissFlagID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Swiss_Email_To_Case__c</fullName>
        <label>Swiss_Email_To_Case</label>
        <type>Email</type>
    </fields>
</CustomObject>